--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".SplashScreen" >
+        <activity android:name=".SplashScreen"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +17,8 @@
         </activity>
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="bogradt.sztear.MAINACTIVITY" />
 
@@ -25,7 +27,8 @@
         </activity>
         <activity
             android:name=".PreliminaryInformationsActivity"
-            android:label="@string/title_activity_preliminary_informations" >
+            android:label="@string/title_activity_preliminary_informations"
+            android:screenOrientation="portrait">
         </activity>
     </application>
 
