--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,9 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity android:name=".SplashScreen"
-                  android:screenOrientation="portrait">
+        <activity
+            android:name=".SplashScreen"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,7 +19,7 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="bogradt.sztear.MAINACTIVITY" />
 
@@ -28,7 +29,13 @@
         <activity
             android:name=".PreliminaryInformationsActivity"
             android:label="@string/title_activity_preliminary_informations"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait" >
+        </activity>
+        <activity
+            android:name=".dialogs.DialogInfoActivity"
+            android:icon="@drawable/info_icon"
+            android:theme="@style/MyTitledActivityDialogTheme"
+            android:label="@string/title_activity_dialog_info">
         </activity>
     </application>
 
