--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,23 @@
             android:theme="@style/MyTitledActivityDialogTheme"
             android:label="@string/title_activity_dialog_info">
         </activity>
+
+        <activity android:name=".apps.ImageTargets.ImageTargets">
+        </activity>
+        <activity android:name=".apps.CloudRecognition.CloudRecognition">
+        </activity>
+        <activity android:name=".apps.CylinderTarget.CylinderTarget">
+        </activity>
+        <activity android:name=".apps.ExtendedTracking.ExtendedTracking">
+        </activity>
+        <activity android:name=".apps.FrameMarkers.FrameMarkers">
+        </activity>
+        <activity android:name=".apps.TextRecognition.TextRecognition">
+        </activity>
+        <activity android:name=".apps.UserDefinedTarget.UserDefinedTarget">
+        </activity>
+        <activity android:name=".apps.VirtualButtons.VirtualButtons">
+        </activity>
     </application>
 
 </manifest>
